Index file updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section1>
-        <div class="cover"><img src="./Images/computer11.jpg" alt="Image" srcset=""></div>
+        <div class="cover"><img src="./Images/Computer.jpeg" alt="Image" srcset=""></div>
     </section1>
 
     <section2>
@@ -30,7 +30,7 @@
             <div class="box"><img src="./Images/computer image 4.jpg" alt="" ></div>
             <div class="box"><img src="./Images/1.jpg" alt="" ></div>
             <div class="box"><img src="./Images/computer image 2.jpg" alt="" ></div>
-            <div class="box"><img src="./Images/5.png" alt="" ></div>
+            <div class="box"><img src="./Images/laptop.jpg" alt="" ></div>
             <div class="box"><img src="./Images/computer image.jpg" alt="" ></div> 
             <div class="box"><img src="./Images/keyboad.jpg" alt="" ></div>
             <div class="box"><img src="./Images/laptop.jpg" alt=""></div >
