--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="box"><img src="./Images/computer image 4.jpg" alt="" ></div>
             <div class="box"><img src="./Images/1.jpg" alt="" ></div>
-            <div class="box"><img src="./Images/computer image 2.jpg" alt="" ></div>
             <div class="box"><img src="./Images/laptop.jpg" alt="" ></div>
+            <div class="box"><img src="./Images/5.png" alt="" ></div>
             <div class="box"><img src="./Images/computer image.jpg" alt="" ></div> 
             <div class="box"><img src="./Images/keyboad.jpg" alt="" ></div>
             <div class="box"><img src="./Images/laptop.jpg" alt=""></div >
